fixed spacing issues on search results

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,11 @@ h4 {
   display: inline;
 }
 
+h5 {
+  color: white;
+  font-size: 13px;
+}
+
 h2 {
   color: white;
 }
@@ -57,7 +62,8 @@ input {
 
 
 .cardItem {
-  float: left;
+  display: inline-block;
+  margin: 30px;
 }
 
 .packCard {
@@ -80,7 +86,9 @@ input {
 table, th, td {
     border: 1px solid black;
 }
-
+.addClass {
+  margin: 0 0 0 72px;
+}
 .hide-image {
   display: none;
   z-index: 100;
